--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lottery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
 <body>
     <main>
         <section id="form-container">
+            <h2>Nueva jugada</h2>
             <form id="lottery-form">
                 <label for="userNumber">Introduce un número del 1 al 10:</label>
                 <input type="number" name="userNumber" id="" min="1" max="10">
@@ -18,7 +19,7 @@
             </article>
         </section>
         <section id="results-container">
-            Últimas jugadas:
+            <h2>Últimas jugadas</h2>
             <table>
                 <thead>
                     <tr>
