handleSubmit Function now is managing getResult()

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <section id="form-container">
             <h2>Nueva jugada</h2>
             <form id="lottery-form">
-                <label for="userNumber">Introduce un número del 1 al 10:</label>
-                <input type="number" name="userNumber" id="" min="1" max="10">
+                <label for="userNumber">Introduce un número del 1 al 10</label>
+                <input type="number" name="userNumber" id="" min="1" max="10" required>
                 <button type="submit">Comprobar resultado</button>
             </form>
             <article id="message-container">
@@ -37,5 +37,6 @@
             <button>Borrar historial</button>
         </section>
     </main>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
