--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <form id="lottery-form">
                 <label for="userNumber">Introduce un número del 1 al 10</label>
                 <input type="number" name="userNumber" id="" min="1" max="10" required>
+                <p id="error-message" class="hidden">Asegúrate de introducir un número del 1 al 10.</p>
                 <button type="submit">Comprobar resultado</button>
             </form>
             <article id="message-container">
